# bootstrap-python-fastapi

./: .bandit.yml  .claudeignore  .codeclimate.yml  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  architecture.puml  config.alloy  config.py  credentials.env.template  di_container.py  docker-compose.yaml  docker-container.puml  docker.env  flow.puml  local.env  mkdocs.yml  mypy.ini  otel-collector-config.yaml  pyproject.toml  renovate.json  setup.cfg  test-cross-domain-imports.sh
.github/: CODEOWNERS
.github/workflows/: ci-pipeline.yml  github-pages.yml  python-3.10.yml  python-3.11.yml  python-3.8.yml  python-3.9.yml  python-bandit.yml  python-code-style.yml  python-container.yml  python-lint.yml  python-quality.yml  python-test-pull-request.yml  python-tests.yml  python-typing.yml
.gitlab_ci/: _templates.yml  base.yml  build.yml  deploy.yml  release.yml  test.yml
.qlty/: qlty.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2022-11-09-203313-52b1246eda46_create_tables.py
app/: README.md  __init__.py  config.py  containers.py  templates.py
app/domains/books/: README.md  __init__.py  boundary_interfaces.py  dto.py  interfaces.py
app/domains/books/_local/: __init__.py  data_access_interfaces.py  models.py
app/models/: README.md  __init__.py
app/routes/: README.md  __init__.py  hello.py  ping.py
app/routes/api/: books.py
app/routes/books/: __init__.py
app/storage/: __init__.py
app/storage/SQLAlchemy/: __init__.py  default_tables.py
app/storage/repositories/: __init__.py  abstract.py  book_repository.py
auth_volumes/kratos/: identity.schema.json  kratos.yml  staff.schema.json  user_registered.jsonnet
auth_volumes/oathkeeper/: access-rules.yml  oathkeeper.yml
celery_worker/: __init__.py
common/: bootstrap.py  config.py  di_container.py
docs/: .pages  adr_summary.jinja  api-documentation.md  architecture.md  dockerfile.md  index.md  inversion-of-control.md  zero_trust.md
docs/adr/: .markdownlint  .pages  0001-record-architecture-decisions.md  adr-template.md  summary.md
docs/architecture/: .pages  architecture.md
docs/puml/: docker-container.puml
domains/: README.md  __init__.py  cloudevent_base.py
domains/books/: README.md  __init__.py  _data_access_interfaces.py  _events.py  _service.py  boundary_interfaces.py  dto.py  events.py  service.py  tasks.py
domains/books/_local/: __init__.py  data_access_interfaces.py
domains/books/entities/: cloudevent_base.py  events.py
domains/common/: README.md
gateways/: event.py
gateways/storage/: __init__.py
gateways/storage/SQLAlchemy/: __init__.py  default_tables.py
grpc_app/: __init__.py  __main__.py  entrypoint.py
grpc_app/proto/: books.proto
grpc_app/servicers/: books.py
grpc_app/services/: books.py
http_app/: __init__.py  containers.py  templates.py
http_app/routes/: __init__.py  events.py  ping.py
http_app/routes/api/: __init__.py  books.py
http_app/routes/graphql/: __init__.py  query.py  resolvers.py  types.py
src/: alembic.ini
src/alembic/: env.py
src/alembic/fixtures/: books_example.py
src/alembic/versions/: 2022-11-09-203313-52b1246eda46_create_tables.py  2025-01-26-212326-52b1246eda46_initialize_fixture_tables.py  2025-01-26-212826-bd73bd8a2ac4_create_books_table.py
src/bootstrap/: __init__.py  bootstrap.py  celery.py  config.py  di_container.py  faststream.py
src/bootstrap/logs/: __init__.py  processors.py
src/celery_worker/: __init__.py
src/common/: __init__.py  asyncapi.py  bootstrap.py  config.py  di_container.py  dramatiq.py  errors.py  event_publisher.py  faststream.py  pyproject.toml  telemetry.py  tracing.py  utils.py
src/common/logs/: __init__.py  processors.py
src/domains/: __init__.py  _event_registry.py  pyproject.toml
src/domains/books/: README.md  __init__.py  _gateway_interfaces.py  _service.py  _tasks.py  events.py  interfaces.py  service.py
src/domains/events/: README.md  __init__.py  books.py
src/dramatiq_worker/: __init__.py  pyproject.toml
src/event_consumer/: __init__.py
src/gateways/: event.py  pyproject.toml
src/grpc_app/: __init__.py
src/grpc_app/servicers/: books.py
src/http_app/: __init__.py  __main__.py  context.py  dependencies.py  dev_server.py  pyproject.toml  templates.py
src/http_app/jinja_templates/: hello.html
src/http_app/routes/: __init__.py  asyncapi.py  asyncapi_docs.py  auth.py  docs_ws.py  events.py  hello.py  ping.py  user_registered_hook.py
src/http_app/templates/: list_books.html
src/migrations/: env.py  pyproject.toml  script.py.mako
src/migrations/fixtures/: books_example.py
src/migrations/versions/: 2025-01-26-212326-52b1246eda46_initialize_fixture_tables.py  2025-01-26-212826-bd73bd8a2ac4_create_books_table.py
src/socketio_app/: __init__.py  __main__.py  dev_server.py  pyproject.toml
src/socketio_app/namespaces/: chat.py
src/socketio_app/web_routes/: docs.py
storage/SQLAlchemy/: __init__.py  default_tables.py
storage/repositories/: book_repository.py
stream_consumer/: __init__.py  __main__.py
tests/: conftest.py  test_factory.py
tests/api/: test_ping.py
tests/celery_worker/: test_app_factory.py
tests/common/: test_asyncapi.py  test_dramatiq.py  test_telemetry.py  test_tracing.py  test_utils.py
tests/domains/books/: conftest.py  test_book_service.py  test_book_tasks.py
tests/grpc_app/: conftest.py  test_factory.py
tests/grpc_app/services/: test_books.py
tests/http_app/: conftest.py  test_dependencies.py  test_exception_handlers.py  test_factory.py
tests/http_app/routes/: test_asyncapi.py  test_auth.py  test_docs_ws.py  test_events.py  test_hello.py  test_ping.py
tests/routes/: test_hello.py  test_ping.py
tests/routes/books/: conftest.py  test_create_book.py
tests/socketio_app/: conftest.py  test_app_factory.py
tests/socketio_app/namespaces/: test_chat.py
tests/socketio_app/web_routes/: test_docs.py
tests/storage/: conftest.py  test_sqlalchemy_init.py
tests/storage/repositories/: test_book_repository.py
tests/storage/tables/: test_book_table.py
(+21 files in other folders)
